target/classes/META-INF/jkube/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      jkube.io/git-url: https://github.com/mmartofel/clientelle.git
      app.openshift.io/vcs-uri: https://github.com/mmartofel/clientelle.git
      jkube.io/git-commit: fe331f0c4d67b1443606761b8cebf5d868f04322
      jkube.io/git-branch: master
      jkube.io/scm-url: https://github.com/spring-projects/spring-boot/clientelle
      jkube.io/scm-tag: HEAD
      prometheus.io/path: /metrics
      prometheus.io/port: "9779"
      prometheus.io/scrape: "true"
    labels:
      expose: "true"
      app: clientelle
      provider: jkube
      version: 0.0.1-SNAPSHOT
      group: pl.bik
    name: clientelle
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: clientelle
      provider: jkube
      group: pl.bik
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      jkube.io/git-url: https://github.com/mmartofel/clientelle.git
      app.openshift.io/vcs-uri: https://github.com/mmartofel/clientelle.git
      jkube.io/git-commit: fe331f0c4d67b1443606761b8cebf5d868f04322
      jkube.io/git-branch: master
      jkube.io/scm-url: https://github.com/spring-projects/spring-boot/clientelle
      jkube.io/scm-tag: HEAD
    labels:
      app: clientelle
      provider: jkube
      version: 0.0.1-SNAPSHOT
      group: pl.bik
    name: clientelle
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      app: clientelle
      provider: jkube
      group: pl.bik
    strategy:
      rollingParams:
        timeoutSeconds: 3600
      type: Rolling
    template:
      metadata:
        annotations:
          app.openshift.io/vcs-ref: master
          jkube.io/git-branch: master
          jkube.io/scm-url: https://github.com/spring-projects/spring-boot/clientelle
          jkube.io/git-url: https://github.com/mmartofel/clientelle.git
          app.openshift.io/vcs-uri: https://github.com/mmartofel/clientelle.git
          jkube.io/scm-tag: HEAD
          jkube.io/git-commit: fe331f0c4d67b1443606761b8cebf5d868f04322
        labels:
          app: clientelle
          provider: jkube
          version: 0.0.1-SNAPSHOT
          group: pl.bik
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: clientelle:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            successThreshold: 1
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            successThreshold: 1
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - spring-boot
        from:
          kind: ImageStreamTag
          name: clientelle:latest
      type: ImageChange
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      jkube.io/git-url: https://github.com/mmartofel/clientelle.git
      app.openshift.io/vcs-uri: https://github.com/mmartofel/clientelle.git
      jkube.io/git-commit: fe331f0c4d67b1443606761b8cebf5d868f04322
      jkube.io/git-branch: master
      jkube.io/scm-url: https://github.com/spring-projects/spring-boot/clientelle
      jkube.io/scm-tag: HEAD
    labels:
      app: clientelle
      provider: jkube
      version: 0.0.1-SNAPSHOT
      group: pl.bik
    name: clientelle
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: clientelle
